# Checkin

./: .cache  README.md  checkin.py  colorscheme.py  edit.py  fields.py  graph.py  pyproject.toml  spotify.py  start.py
checkin/: checkin.py  config.py  edit.py  fields.py  graph.py  spotify.py  start.py
data/: 2024.csv  2024_spotify.json
