[tool.poetry]
name = "checkin"
version = "0.1.0"
description = "a daily checkin app and tracker"
authors = ["Iain05 <igriesdale@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
