[tool.poetry]
name = "checkin"
version = "0.1.0"
description = "a daily checkin app and tracker"
authors = ["Iain05 <igriesdale@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
questionary = "^2.0.1"
catppuccin = "^2.3.4"
pandas = "^2.2.3"
uniplot = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
checkin = "checkin:main" #entry point