[tool.poetry]
name = "checkin"
version = "0.1.0"
description = "a daily checkin app and tracker"
authors = ["Iain05 <igriesdale@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "start" },
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
questionary = "^2.0.1"
catppuccin = "^2.3.4"
pandas = "^2.2.3"
plotext = "^5.3.2"
pandas-stubs = "^2.2.3.241126"
spotipy = "^2.24.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
checkin = "checkin:main" #entry point

[tool.pyright]
venvPath = "."
venv = ".venv"
